[package]
name = "advent_code_lib"
version = "0.12.16"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
enum-iterator = "0.6.0"
trait-set = "0.2"
derive-getters = "0.2.0"
common_macros = "0.1"
bare_metal_modulo = "0.11"
hash_histogram = "0.6"
priority-queue = "1.2"
num = "0.4"
indexmap = "1.7"