[package]
name = "advent_code_lib"
version = "0.20.5"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
enum-iterator = "1"
trait-set = "0.3"
derive-getters = "0.3.0"
common_macros = "0.1"
bare_metal_modulo = "1"
hash_histogram = "0.8.0"
priority-queue = "1.2"
num = "0.4"
indexmap = "2.1.0"
anyhow = "1"